# AutoHost

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  ACTION_PLAN_RELOAD_NOW.md  COMPLETE_ERROR_FIX_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DETAILED_ERROR_FIXES.md  Dockerfile  Dockerfile.prod  ERROR_RESOLUTION.md  FINAL_STATUS.md  FIX_RED_ERRORS.md  PRODUCTION_READINESS.md  PRODUCTION_SUMMARY.md  README.md  SECURITY.md  SECURITY_FILES_FIXES.md  architecture.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest_output.txt  repo_map.json  test_call.py  test_out.txt  test_prompt.py
.github/workflows/: ci.yml  release.yml
agent/: __init__.py  config.py  logging.py  permissions.py  safety.py  security.py  security_middleware.py  version.py  web.py
agent/cli/: __init__.py  agent_loop.py  console.py
agent/llm/: __init__.py  client.py  prompts.py
agent/memory/: __init__.py  memory_store.py
agent/orchestrator/: __init__.py  database.py  database_secure.py  models.py  planner.py  react_agent.py  routes.py  security_config.py  server.py  session.py  task_manager.py
agent/orchestrator/static/: app.js  index.html  styles.css
agent/sandbox/: sandbox_runner.py  secure_sandbox.py
agent/tools/: __init__.py  codebase_analyzer.py
tests/: __init__.py  conftest.py  test_codebase_analyzer.py  test_config.py  test_e2e.py  test_memory.py  test_permissions.py  test_planner.py  test_react_agent.py  test_sub_agents.py
