[project]
name = "autohost"
dynamic = ["version"]
description = "A privacy-first AI agent that runs entirely on your machine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "ollama>=0.4.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
    "websockets>=12.0",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.10.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "python-docx>=1.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "structlog>=24.1.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.4.0",
    "sqlalchemy>=2.0.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "RestrictedPython>=6.0",
    "pybreaker>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "mypy>=1.8.0",
    "ruff>=0.14.14",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0",
    "bandit>=1.7.5"
]

[project.scripts]
autohost = "agent.cli:cli"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "agent.version.__version__"}

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.14.14",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line length handled separately
    "B904",   # Exception chaining - intentionally simplified error messages
    "SIM105", # contextlib.suppress - explicit try/except preferred for clarity
    "SIM108", # Ternary operator - sometimes if/else is clearer
    "SIM110", # any() comprehension - explicit loop preferred for readability
    "SIM103", # Return boolean directly - sometimes explicit is clearer
]

[tool.ruff.lint.isort]
known-first-party = ["agent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
no_implicit_optional = true
disable_error_code = [
    "call-overload",
    "arg-type",
    "return-value",
    "misc",
    "name-defined",
    "var-annotated",
    "attr-defined",
    "index",
    "operator",
    "return",
    "valid-type",
    "type-arg",
]
plugins = []

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "e2e: End-to-end tests that require real system execution",
]
